Aug 01, 2003

  * FIXED: rdf_save/[1,2]

Jun 23, 2003

  * ADDED: rdf_generation/1

Jun 20, 2003

  * FIXED: Memory leak in rdf_reachable/3.

  * FIXED: Various installation issues

Jun 10, 2003

  * Initial public version